# Hack-ITMO-2025

./: .env  .gitignore  Dockerfile  HUMAN_API_INTEGRATION.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requriments.txt  restart.sh  start.sh  start_background.sh  stop.sh
app/: api_clients.py  bot.py  config.py  database.py  fatsecret_service.py  fatsecret_service_mock.py  handlers.py  human_api_service.py  human_api_service_mock.py  main.py  main_service.py  models.py  service.py
app/config/: __init__.py  config.py
app/database/: alembic.ini
app/database/alembic/: env.py
app/database/alembic/versions/: 40cc56154025_inital.py  ec25d41c532a_inital.py
app/database/connection/: __init__.py  session.py
app/database/models/: __init__.py  custom_product.py  product.py  prouduct.py  user.py
app/endpoints/: __init__.py  test_route.py
app/mocks/: __init__.py  database_mock.py  fatsecret_service_mock.py  human_api_service_mock.py
app/schemas/: product.py  user.py
app/utils/: database.py  database_mock.py
