[tool.poetry]
name = "app"
version = "0.1.0"
description = "Telegram bot for calories conversion"
readme = "README.md"
authors = []
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.104.1"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
python-telegram-bot = ">=20.7"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
python-multipart = ">=0.0.6"
sqlalchemy = ">=2.0.23"
alembic = ">=1.13.0"
asyncpg = ">=0.29.0"
psycopg2-binary = ">=2.9.9"
python-dotenv = ">=1.0.0"
requests = ">=2.31.0"
requests-oauthlib = ">=1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
httpx = ">=0.25.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"

[tool.poetry.scripts]
start = "app.main:main"

[project]
name = "app"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-telegram-bot>=20.7",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "ipdb>=0.13.0",
    "sqlalchemy-utils>=0.41.0",

]

[project.scripts]
start = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

